--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ crashlytics.properties
 crashlytics-build.properties
 
 # Created by .ignore support plugin (hsz.mobi)
+
+# Storage json file
+storage.json
